        information), and evas will call a specific loader binary
        based on extension name of srouce file. This allows for evas to
        load image data from files where the loader may be prone to
        instability, or require use of libraries that are GPL or
        otherwise undesireable in terms of the result to applications
        using evas. So basically, if you want a GPL loader or have a
        very unstable one, write a loader binary and call it
        evas_image_loader.extension e.g. evas_image_loader.pdf or
        evas_image_loader.xcf or evas_image_loader.xcf.gz etc. etc.

2011-04-28 Shilpaonkar Singh

	* Textblock: Add "password" tag to turn on/off password in the middle
	  of the textblok. Especially useful for implementing "show last char"
	  for password entries.

2011-05-04  Carsten Haitzler (The Rasterman)

	* Improved table layout for homogenous mode to handle not column
        or row multiple sized table better.

2011-05-04  Jiyoun Park

	* OpenGL binary shader ability to cache (save and load back
        later) to avoid re-compiling shaders on every time an app starts and
        uses the GL engine. Faster startup time.

2011-05-04 Tom Hacohen (TAsn)

	* Textblock: Do standard compliant line breaks. In order to achieve
	  that we now statically link against liblinebreak (available in
	  src/static_deps/liblinebreak). It's usage can be disabled using the
	  configure flag: "--disable-liblinebreak"; Disabling it will activate
	  the fallback line breaking methods which are not very correct, but
	  are possibly faster. I haven't noticed any difference between the
	  two speed-wise, but there probably are in some rare cases.

2011-05-06 Cedric Bail

	* Don't try all image loader when user is pointing them on a directory.

2011-05-11  Carsten Haitzler (The Rasterman)

	* Fix problem with Evas engine not calling pre/post swap functions
        in the GL engine when using EGL/OpenGL-ES2
